Fixed dark mode problem

--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -8,21 +8,13 @@
   --background-end-rgb: 255, 255, 255;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
-  /* hide for chrome, safari and opera */
-  .hide-scrollbar::-webkit-scrollbar{
-    display: none;
-  }
-  /* hide for IE,edge and firefox */
-  .hide-scrollbar{
-    -ms-overflow-style:none;
-    scrollbar-width: none;
-  }
+.hide-scrollbar::-webkit-scrollbar{
+  display: none;
+}
+/* hide for IE,edge and firefox */
+.hide-scrollbar{
+  -ms-overflow-style:none;
+  scrollbar-width: none;
 }
 
 body {
